--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple chat test application for CSE 405",
   "main": "server/app.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase": "^7.14.5"
   },
   "devDependencies": {},
   "scripts": {
