--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server/app.js",
   "dependencies": {
     "express": "^4.17.1",
-    "firebase": "^7.14.5"
+    "firebase": "^7.14.5",
+    "firebase-admin": "^8.12.1",
+    "ws": "^7.3.0"
   },
   "devDependencies": {},
   "scripts": {
